--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Auto-fix/Home</title>
 </head>
 <body>
@@ -18,7 +19,11 @@
                 <a href="">Blog</a>
                 <a href="">Contact us</a>
             </div>
-            <div class="nav_link2"></div>
+            <div class="nav_link2">
+                <a href="" title="location"><i class="bi bi-geo-alt-fill"></i></a>
+                <a href="" title="bookings"><i class="bi bi-cart-fill"></i></a>
+                <a href=""></a>
+            </div>
         </nav>
     </header>
     <section></section>
