added a background image

--- a/index.html
+++ b/index.html
@@ -20,13 +20,49 @@
                 <a href="">Contact us</a>
             </div>
             <div class="nav_link2">
-                <a href="" title="location"><i class="bi bi-geo-alt-fill"></i></a>
-                <a href="" title="bookings"><i class="bi bi-cart-fill"></i></a>
-                <a href=""></a>
+                <a href="" title="location" class="location"><i class="bi bi-geo-alt-fill"></i></a>
+                <a href="" title="bookings" class="bookings"><i class="bi bi-cart-fill"></i></a>
+                <a href="" class="sign_up">sign up</a>
             </div>
         </nav>
     </header>
-    <section></section>
+    <section>
+        <div class="main_img">
+            <div class="title_1">Professional Auto Repair & Maintenance</div>
+            <div class="title_2">Schedule your car service in just a click-whether it`s routine maintenance or urgent repairs we got you covered.</div>
+            <a href="" class="Schedule_appointment">Schedule appointment</a>
+        </div>
+        <div class="summary">
+            <div>
+                <div class="summary_info">
+                    <p>1200+</p>
+                    <div>Cars serviced</div>
+                </div>
+                <div class="summary_info">
+                    <p>1600+</p>
+                    <div>Satisfied customers</div>
+                </div>
+                <div class="summary_info">
+                    <p>25+</p>
+                    <div>Services offered</div>
+                </div>
+                <div class="summary_info">
+                    <p>17+</p>
+                    <div>Years of experience</div>
+                </div>
+            </div>
+        </div>
+        <div class="features">
+            <div class="features_heading">Auto Fix Key Features</div>
+            <div class="features_key">
+                <div class="key_features"></div>
+                <div class="key_features"></div>
+                <div class="key_features"></div>
+                <div class="key_features"></div>
+                <div class="key_features"></div>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 </body>
 </html>
