--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-straight/css/uicons-solid-straight.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Auto-fix/Home</title>
 </head>
@@ -55,11 +59,68 @@
         <div class="features">
             <div class="features_heading">Auto Fix Key Features</div>
             <div class="features_key">
-                <div class="key_features"></div>
-                <div class="key_features"></div>
-                <div class="key_features"></div>
-                <div class="key_features"></div>
-                <div class="key_features"></div>
+                <div class="key_features">
+                    <div class="features_img">
+                        <img src="images/3d mechanic workshop.png" alt="">
+                    </div>
+                    <div class="key_features_heading">Fully Equipped Workshop</div>
+                </div>
+                <div class="key_features">
+                    <div class="features_img">
+                        <img src="images/3d car parts.png" alt="">
+                    </div>
+                    <div class="key_features_heading">Aunthentic Products</div>
+                </div>
+                <div class="key_features">
+                    <div class="features_img">
+                        <img src="images/home services.png" alt="">
+                    </div>
+                    <div class="key_features_heading">Doorstep Support Services</div>
+                </div>
+                <div class="key_features">
+                    <div class="features_img">
+                        <img src="images/mechanic fixing.webp" alt="">
+                    </div>
+                    <div class="key_features_heading">Vechicle Assistance</div>
+                </div>
+                <div class="key_features">
+                    <div class="features_img">
+                        <img src="images/money bags.png" alt="">
+                    </div>
+                    <div class="key_features_heading">Transpairent & Fair Prices</div>
+                </div>
+            </div>
+        </div>
+        <div class="why_choose_us">
+            <div class="why_img">
+                <div class="why_heading">
+                    <p class="heading_1">Why Choose Us</p>
+                    <p class="heading_2">We offer full service Auto Repair & Maintenance</p>
+                </div>
+                <div class="why_reasons">
+                    <div class="reasons">
+                        <p>Diagnostics</p>
+                    </div>
+                    <div class="reasons">
+                        <i class="fi fi-rs-pump"></i>
+                        <p>Suspension</p>
+                    </div>
+                    <div class="reasons">
+                        <i class="fi fi-rr-user-plumber"></i>
+                        <p>Dent & paint</p>
+                    </div>
+                    <div class="reasons">
+                        <i class="fi fi-ss-brake-warning"></i>
+                        <p>Brakes</p>
+                    </div>
+                    <div class="reasons">
+                        <i class="fi fi-sr-oil-can"></i>
+                        <p>Oil / Filters</p>
+                    </div>
+                    <div class="reasons">
+                        <p>Detoiling</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
