added new section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-straight/css/uicons-thin-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-straight/css/uicons-solid-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
@@ -119,6 +120,78 @@
                     </div>
                     <div class="reasons">
                         <p>Detoiling</p>
+                    </div>
+                </div>
+            </div>
+        </div>       
+        <div class="service_package">
+            <div class="service_package_heading">Periodic Service Packages</div>
+            <div class="services">
+                <div class="Packages">
+                    <img src="images/mechanic fixing the car brake.jpg" alt="">
+                    <p class="name_of_service">Brake Inspection</p>
+                    <p class="price">#420</p>
+                    <a href=""><i class="bi bi-cart4"></i> Add to cart</a>
+                </div>
+                <div class="Packages">
+                    <img src="images/mechanictoppingupoilcar.avif" alt="">
+                    <p class="name_of_service">Essential Car Care</p>
+                    <p class="price">#5000</p>
+                    <a href=""><i class="bi bi-cart4"></i> Add to cart</a>
+                </div>
+                <div class="Packages">
+                    <img src="images/Mechanicchangingoil.avif" alt="">
+                    <p class="name_of_service">Advanced Car Care</p>
+                    <p class="price">#4000</p>
+                    <a href=""><i class="bi bi-cart4"></i> Add to cart</a>
+                </div>
+                <div class="Packages">
+                    <img src="images/professional-mechanic-adjusting-automobile-wheel-alignment.jpg" alt="">
+                    <p class="name_of_service">Wheel Alignment</p>
+                    <p class="price">#500</p>
+                    <a href=""><i class="bi bi-cart4"></i> Add to cart</a>
+                </div>
+            </div>
+        </div>
+        <div class="How_it_works">
+            <div class="works_img">
+                <div class="How_it_works_heading">How it Works</div>
+                <div class="How_it_works_title">We offer Full service Auto Repair & Maintenance</div>
+                <div class="steps">
+                    <div>
+                        <div class="steps_heading">
+                            <i class="fi fi-ts-suggestion"></i>
+                            <p>01</p>
+                        </div>
+                        <div class="steps_title">Choose Services</div>
+                    </div>
+                    <div>
+                        <div class="steps_heading">
+                            <i class="fi fi-rs-calendar-clock"></i>
+                            <p>02</p>
+                        </div>
+                        <div class="steps_title">Schedule Appointment</div>
+                    </div>
+                    <div>
+                        <div class="steps_heading">
+                            <i class="fi fi-ts-suggestion"></i>
+                            <p>03</p>
+                        </div>
+                        <div class="steps_title">Confirm Request</div>
+                    </div>
+                    <div>
+                        <div class="steps_heading">
+                            <i class="fi fi-rs-house-chimney"></i>
+                            <p>04</p>
+                        </div>
+                        <div class="steps_title">Doorstep Pickup</div>
+                    </div>
+                    <div>
+                        <div class="steps_heading">
+                            <i class="fi fi-rr-hand-holding-medical"></i>
+                            <p>05</p>
+                        </div>
+                        <div class="steps_title">Vechicle Assistance</div>
                     </div>
                 </div>
             </div>
