added a new section for customers reviews

--- a/index.html
+++ b/index.html
@@ -196,6 +196,15 @@
                 </div>
             </div>
         </div>
+        <div class="Testimonials">
+            <div class="Testimonials_heading">Testimonials</div>
+            <div class="Testimonials_title">What Our Customers Say</div>
+            <div class="Testimonials_info">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     </section>
     <footer></footer>
 </body>
