--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script/script.js"></script>
     <link rel="stylesheet" href="index.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-straight/css/uicons-thin-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
@@ -200,12 +201,125 @@
             <div class="Testimonials_heading">Testimonials</div>
             <div class="Testimonials_title">What Our Customers Say</div>
             <div class="Testimonials_info">
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <div class="Testimonials_info_heading">
+                        <p>"</p>
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="Testimonials_info_heading">
+                        <p>"</p>
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <div>
+                    <div class="Testimonials_info_heading">
+                        <p>"</p>
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="banner_img">
+                <div class="banner_title">
+                    Get Professional Car-service with <span>free</span> doorstep <br>
+                    <span>pickup</span> and <span>drop-off</span>
+                </div>
+                <div class="banner_info"></div>
+                <a href=""></a>
+            </div>
+        </div>
+        <div class="questions">
+            <div class="questions_img">
+                <div class="questions_heading">FAQs By Customers</div>
+                <div class="questions_container">
+                    <div class="dropdown">
+                        <button onclick="myFunction()" class="dropbtn">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown" class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="questions_container">
+                   <div class="dropdown2">
+                        <button onclick="myFunction2()" class="dropbtn2">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown2" class="dropdown-content2">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="questions_container">
+                   <div class="dropdown">
+                        <button onclick="myFunction3()" class="dropbtn3">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown3" class="dropdown-content3">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="questions_container">
+                   <div class="dropdown">
+                        <button onclick="myFunction4()" class="dropbtn4">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown4" class="dropdown-content4">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="brands">
+            <div class="brands_heading">Brands we serve</div>
+            <div class="brands_title"></div>
+            <div class="brand_logos">
+                <img src="images/wolveswagen logo.png" alt="">
+                <img src="images/bmw logo.png" alt="">
+                <img src="images/toyota logo.png" alt="">
+                <img src="images/nissan logo.png" alt="">
+                <img src="images/Audi logo.png" alt="">
+                <img src="images/mazoa logo.png" alt="">
+                <img src="images/honda logo.png" alt="">
+                <img src="images/benz logo.png" alt="">
             </div>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <div class="footer_1">
+            <div class="footer_div_1">
+                <div class="logo">AUTO-FIX</div>
+                <div class="footer_div_1_title"></div>
+                <div class="socials">
+                    <a href="https://x.com" target="_blank" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://facebook.com" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://instagram.com" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer_links">
+                <p class="footer_links_heading">Links</p>
+                <a href="">Home</a> <br>
+                <a href="">About us</a> <br>
+                <a href="">Services</a> <br>
+                <a href="">Blog</a> <br>
+                <a href="">Contact Us</a> <br>
+                <a href="">Privacy Policy</a> <br>
+            </div>
+            <div class="contacts">
+                <div class="contacts_heading">Contacts</div>
+                <p><i class="bi bi-telephone-plus-fill"></i>  xxxx-xxx-xxxx</p>
+                <p><i class="bi bi-envelope-arrow-up-fill"></i>  autofix@gmail.com</p>
+                <p>17 avenue street, city, state, country</p>
+                <p>Mon-Sat 9:00am - 4:00pm sun-holiday</p>
+            </div>
+        </div>
+        <div class="footer_2">Auto fix All rights reserved | copyright @ 2025</div>
+    </footer>
 </body>
 </html>
