added new brakpoints

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <title>Auto-fix/Home</title>
+    <title>Auto-fix</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">AUTO-FIX</div>
             <div class="nav_link1">
-                <a href="">Home</a>
+                <a href="index.html">Home</a>
                 <a href="">About us</a>
                 <a href="">Services</a>
                 <a href="">Blog</a>
@@ -204,19 +204,19 @@
                 <div>
                     <div class="Testimonials_info_heading">
                         <p>"</p>
-                        <img src="" alt="">
+                        <img src="images/user-icon.webp" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="Testimonials_info_heading">
                         <p>"</p>
-                        <img src="" alt="">
+                        <img src="images/user-icon.webp" alt="">
                     </div>
                 </div>
                 <div>
                     <div class="Testimonials_info_heading">
                         <p>"</p>
-                        <img src="" alt="">
+                        <img src="images/user-icon.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -304,7 +304,7 @@
             </div>
             <div class="footer_links">
                 <p class="footer_links_heading">Links</p>
-                <a href="">Home</a> <br>
+                <a href="index.html">Home</a> <br>
                 <a href="">About us</a> <br>
                 <a href="">Services</a> <br>
                 <a href="">Blog</a> <br>
