added a new breakpoint

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 <body>
     <header>
         <nav>
+            <div>
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" title="close">&times;</a>
+                    <a href="#About">Home</a>
+                    <a href="#Education">Education</a>
+                    <a href="#services">Services</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contact">Contact</a>
+                </div>
+                <span class="sidebar" onclick="openNav()" title="sidemenu">&#9776;</span>
+            </div>
             <div class="logo">AUTO-FIX</div>
             <div class="nav_link1">
                 <a href="index.html">Home</a>
