--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="logo">AUTO-FIX</div>
             <div class="nav_link1">
                 <a href="index.html">Home</a>
-                <a href="">About us</a>
+                <a href="About_us.html">About us</a>
                 <a href="">Services</a>
                 <a href="">Blog</a>
                 <a href="">Contact us</a>
