first commit for the about us page

--- a/About_us.html
+++ b/About_us.html
@@ -11,6 +11,7 @@
 <body>
     <header>
         <nav>
+            <!-- This is a side bar navigation menu for devices with lower breakpoints-->
             <div>
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" title="close">&times;</a>
@@ -23,6 +24,7 @@
                 <span class="sidebar" onclick="openNav()" title="sidemenu">&#9776;</span>
             </div>
             <div class="logo">AUTO-FIX</div>
+            <!-- This links navigate towards the index/home paage, About-us page, services, blog and contacts-->
             <div class="nav_link1">
                 <a href="index.html">Home</a>
                 <a href="About_us.html">About us</a>
@@ -30,6 +32,7 @@
                 <a href="">Blog</a>
                 <a href="">Contact us</a>
             </div>
+            <!-- This contains the bookings link, location link and the sign up button-->
             <div class="nav_link2">
                 <a href="" title="location" class="location"><i class="bi bi-geo-alt-fill"></i></a>
                 <a href="" title="bookings" class="bookings"><i class="bi bi-cart-fill"></i></a>
@@ -39,7 +42,56 @@
     </header>
     <section>
         <div class="main_img_container">
-            <div></div>
+            <!-- This is an easy navigtion link between the home/index page and the about us page-->
+            <div class="main_links">
+                <a href="index.html" class="main_link_1">Home</a> >
+                <a href="About_us.html" class="main_link_2">About Us</a>
+            </div>
+            <!-- The main background image-->
+            <div class="main_img">
+                <div class="title_1">ABOUT TEAM AUTO FIX</div>
+                <div class="title_2"></div>
+                <a href="" class="Schedule_appointment">Schedule appointment</a>
+            </div>
+        </div>
+        <div class="summary">
+            <div>
+                <div class="summary_info">
+                    <p>1200+</p>
+                    <div>Cars serviced</div>
+                </div>
+                <div class="summary_info">
+                    <p>1600+</p>
+                    <div>Satisfied customers</div>
+                </div>
+                <div class="summary_info">
+                    <p>25+</p>
+                    <div>Services offered</div>
+                </div>
+                <div class="summary_info">
+                    <p>17+</p>
+                    <div>Years of experience</div>
+                </div>
+            </div>
+        </div>
+        <div class="About_us">
+            <!-- The first about us container-->
+            <div class="about_us_sections_1">
+                <div>
+                    <div class="section_1_heading">About Us</div>
+                    <div class="section_title_1">Committed to Quality, driven By Customer Satisfaction</div>
+                    <div class="section_info_1"></div>
+                    <div class="section_info_1"></div>
+                    <div class="section_info_1"></div>
+                </div>
+                <img src="" alt="">
+            </div>
+            <div class="about_us_sections_2">
+                <div class="section_2_heading">Meet Your Experts</div>
+                <div class="section_2_containers"></div>
+                <div class="section_2_containers"></div>
+                <div class="section_2_containers"></div>
+            </div>
         </div>
     </section>
 </body>
