--- a/About_us.html
+++ b/About_us.html
@@ -84,15 +84,69 @@
                     <div class="section_info_1"></div>
                     <div class="section_info_1"></div>
                 </div>
-                <img src="" alt="">
+                <img src="images/first mechanic profile.webp" alt="">
             </div>
+            <!-- The second about us container-->
             <div class="about_us_sections_2">
                 <div class="section_2_heading">Meet Your Experts</div>
-                <div class="section_2_containers"></div>
-                <div class="section_2_containers"></div>
-                <div class="section_2_containers"></div>
+                <div class="section_2_containers">
+                    <img src="images/female-mechanic.webp" alt="">
+                    <div></div>
+                </div>
+                <div class="section_2_containers">
+                    <div></div>
+                    <img src="images/second mechanic profile.webp" alt="">
+                </div>
+                <div class="section_2_containers">
+                    <img src="images/third mechanic profile.jpg" alt="">
+                    <div></div>
+                </div>
+            </div>
+        </div>
+        <div class="brands">
+            <div class="brands_heading">Brands we serve</div>
+            <div class="brands_title"></div>
+            <div class="brand_logos">
+                <img src="images/wolveswagen logo.png" alt="">
+                <img src="images/bmw logo.png" alt="">
+                <img src="images/toyota logo.png" alt="">
+                <img src="images/nissan logo.png" alt="">
+                <img src="images/Audi logo.png" alt="">
+                <img src="images/mazoa logo.png" alt="">
+                <img src="images/honda logo.png" alt="">
+                <img src="images/benz logo.png" alt="">
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer_1">
+            <div class="footer_div_1">
+                <div class="logo">AUTO-FIX</div>
+                <div class="footer_div_1_title"></div>
+                <div class="socials">
+                    <a href="https://x.com" target="_blank" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://facebook.com" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://instagram.com" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer_links">
+                <p class="footer_links_heading">Links</p>
+                <a href="index.html">Home</a> <br>
+                <a href="About_us.html">About us</a> <br>
+                <a href="">Services</a> <br>
+                <a href="">Blog</a> <br>
+                <a href="">Contact Us</a> <br>
+                <a href="">Privacy Policy</a> <br>
+            </div>
+            <div class="contacts">
+                <div class="contacts_heading">Contacts</div>
+                <p><i class="bi bi-telephone-plus-fill"></i>  xxxx-xxx-xxxx</p>
+                <p><i class="bi bi-envelope-arrow-up-fill"></i>  autofix@gmail.com</p>
+                <p>17 avenue street, city, state, country</p>
+                <p>Mon-Sat 9:00am - 4:00pm sun-holiday</p>
+            </div>
+        </div>
+        <div class="footer_2">Auto fix All rights reserved | copyright @ 2025</div>
+    </footer>
 </body>
 </html>
