added new sections to the blog page

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="blog.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-bold-rounded/css/uicons-bold-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-straight/css/uicons-thin-straight.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-straight/css/uicons-solid-straight.css'>
@@ -34,7 +35,7 @@
                 <a href="index.html">Home</a>
                 <a href="About_us.html">About us</a>
                 <a href="">Services</a>
-                <a href="">Blog</a>
+                <a href="blog.html">Blog</a>
                 <a href="">Contact us</a>
             </div>
             <!-- This contains the bookings link, location link and the sign up button-->
@@ -45,5 +46,54 @@
             </div>
         </nav>
     </header>
+    <section>
+        <div class="main_img_container">
+            <!-- This is an easy navigtion link between the home/index page and the about us page-->
+            <div class="main_links">
+                <a href="index.html" class="main_link_1">Home</a> >
+                <a href="blog.html" class="main_link_2">Blog</a>
+            </div>
+            <!-- The main background image-->
+            <div class="main_img">
+                <div class="title_1">OUR BLOG</div>
+                <div class="title_2"></div>
+            </div>
+        </div>
+        <div class="resources">
+            <div class="resources_heading">
+                <p class="resources_heading_1">Resources and Insights</p>
+                <p class="resources_heading_2">The latest industry news, technologies and insights</p>
+            </div>
+            <div class="resources_links">
+                <a href=""></a>
+                <a href=""></a>
+                <a href="">Car Accessories</a>
+                <a href="">services<i class="fi fi-rs-angle-small-down"></i></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <input type="text" placeholder="Search">
+            </div>
+            <div class="recent_blog_container">
+                <div class="recent_blog">
+                    <div class="recent_blog_1">
+                        <div class="recent_blog_1_heading">Recent Blog Posts</div>
+                        <img src="images/recent blog post first image.jpg" alt="">
+                        <div class="recent_blog_1_subtitle"></div>
+                        <div class="recent_blog_1_title">
+                            <p>Driver`s Liscense Application</p>
+                            <i class="fi fi-br-arrow-up-right"></i>
+                        </div>
+                        <div class="recent_blog_1_info"></div>
+                    </div>
+                    <div class="recent_blog_2">
+                        <img src="images/recent blog post second image.png" alt="">
+                        <img src="images/third recent blog post image.jpg" alt="">
+                    </div>
+                    <div class="recent_blog_3"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
