finished the blog page for breakpoint less than 1200px

--- a/blog.html
+++ b/blog.html
@@ -94,6 +94,52 @@
                 </div>
             </div>
         </div>
+        <!-- This div is for all blog post-->
+        <div class="all_blog_post">
+            <div class="all_blog_heading">All Blog Posts</div>
+            <!-- This container is for all the posts-->
+            <div class="all_posts_container">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
     </section>
+    <footer>
+        <div class="footer_1">
+            <div class="footer_div_1">
+                <div class="logo">AUTO-FIX</div>
+                <div class="footer_div_1_title"></div>
+                <div class="socials">
+                    <a href="https://x.com" target="_blank" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://facebook.com" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://instagram.com" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer_links">
+                <p class="footer_links_heading">Links</p>
+                <a href="index.html">Home</a> <br>
+                <a href="">About us</a> <br>
+                <a href="">Services</a> <br>
+                <a href="">Blog</a> <br>
+                <a href="">Contact Us</a> <br>
+                <a href="">Privacy Policy</a> <br>
+            </div>
+            <div class="contacts">
+                <div class="contacts_heading">Contacts</div>
+                <p><i class="bi bi-telephone-plus-fill"></i>  xxxx-xxx-xxxx</p>
+                <p><i class="bi bi-envelope-arrow-up-fill"></i>  autofix@gmail.com</p>
+                <p>17 avenue street, city, state, country</p>
+                <p>Mon-Sat 9:00am - 4:00pm sun-holiday</p>
+            </div>
+        </div>
+        <div class="footer_2">Auto fix All rights reserved | copyright @ 2025</div>
+    </footer>
 </body>
 </html>
