--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto-fix/services</title>
     <link rel="stylesheet" href="services.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
      <header>
@@ -27,7 +28,7 @@
             <div class="nav_link1">
                 <a href="index.html">Home</a>
                 <a href="About_us.html">About us</a>
-                <a href="">Services</a>
+                <a href="services.html">Services</a>
                 <a href="blog.html">Blog</a>
                 <a href="">Contact us</a>
             </div>
@@ -48,11 +49,44 @@
             </div>
             <!-- The main background image-->
             <div class="main_img">
-                <div class="title_1">ABOUT TEAM AUTO FIX</div>
+                <div class="title_1">BRAKE ALIGNMENT</div>
                 <div class="title_2"></div>
                 <a href="" class="Schedule_appointment">Schedule appointment</a>
             </div>
         </div>
+        <div class="Bumper_div">
+            <div></div>
+        </div>
     </section>
+     <footer>
+        <div class="footer_1">
+            <div class="footer_div_1">
+                <div class="logo">AUTO-FIX</div>
+                <div class="footer_div_1_title"></div>
+                <div class="socials">
+                    <a href="https://x.com" target="_blank" title="Twitter"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://facebook.com" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a>
+                    <a href="https://instagram.com" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer_links">
+                <p class="footer_links_heading">Links</p>
+                <a href="index.html">Home</a> <br>
+                <a href="About_us.html">About us</a> <br>
+                <a href="services.html">Services</a> <br>
+                <a href="blog.html">Blog</a> <br>
+                <a href="">Contact Us</a> <br>
+                <a href="">Privacy Policy</a> <br>
+            </div>
+            <div class="contacts">
+                <div class="contacts_heading">Contacts</div>
+                <p><i class="bi bi-telephone-plus-fill"></i>  xxxx-xxx-xxxx</p>
+                <p><i class="bi bi-envelope-arrow-up-fill"></i>  autofix@gmail.com</p>
+                <p>17 avenue street, city, state, country</p>
+                <p>Mon-Sat 9:00am - 4:00pm sun-holiday</p>
+            </div>
+        </div>
+        <div class="footer_2">Auto fix All rights reserved | copyright @ 2025</div>
+    </footer>
 </body>
 </html>
