--- a/services.html
+++ b/services.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auto-fix/services</title>
     <link rel="stylesheet" href="services.css">
+    <script src="script/script.js"></script>
+     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-thin-straight/css/uicons-thin-straight.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-straight/css/uicons-solid-straight.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-straight/css/uicons-regular-straight.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -54,11 +60,102 @@
                 <a href="" class="Schedule_appointment">Schedule appointment</a>
             </div>
         </div>
-        <div class="Bumper_div">
-            <div></div>
+        <div class="wheel_div">
+            <div>
+                <div class="wheel_info_div">
+                    <p class="wheel_info_heading">Brake Alignment</p>
+                    <p class="wheel_info"></p>
+                    <a href="" class="Schedule_appointment2">Schedule appointment</a>
+                </div>
+                <img src="images/services page mechanic fixing a car.png" alt="" class="wheel_img">
+            </div>
+        </div>
+        <div class="why_choose_us">
+            <div>
+                <p class="why_choose_heading">Why choose Auto-fix for Brake Alignment</p>
+                <p class="why_choose_title"></p>
+                <div class="why_info_div">
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </div>
+        <div class="service_approach">
+            <div>
+                <div class="service_approach_heading">Our Services Approach</div>
+                <div class="approach_steps">
+                    <a href="">1</a>
+                    <p>-----------</p>
+                    <a href="">2</a>
+                    <p>-----------</p>
+                    <a href="">3</a>
+                    <p>-----------</p>
+                    <a href="">4</a>
+                </div>
+                <div class="Approaches"></div>
+            </div>
+        </div>
+        <div class="questions">
+            <div class="questions_img">
+                <div class="questions_heading">FAQs By Customers</div>
+                <div class="questions_container">
+                    <div class="dropdown">
+                        <button onclick="myFunction()" class="dropbtn">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown" class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="questions_container">
+                   <div class="dropdown2">
+                        <button onclick="myFunction2()" class="dropbtn2">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown2" class="dropdown-content2">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="questions_container">
+                   <div class="dropdown">
+                        <button onclick="myFunction3()" class="dropbtn3">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown3" class="dropdown-content3">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="questions_container">
+                   <div class="dropdown">
+                        <button onclick="myFunction4()" class="dropbtn4">What Is Auto-Fix best known for?  <i class="fi fi-rs-angle-small-down"></i></button>
+                        <div id="myDropdown4" class="dropdown-content4">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="brands">
+            <div class="brands_heading">Brands we serve</div>
+            <div class="brands_title"></div>
+            <div class="brand_logos">
+                <img src="images/wolveswagen logo.png" alt="">
+                <img src="images/bmw logo.png" alt="">
+                <img src="images/toyota logo.png" alt="">
+                <img src="images/nissan logo.png" alt="">
+                <img src="images/Audi logo.png" alt="">
+                <img src="images/mazoa logo.png" alt="">
+                <img src="images/honda logo.png" alt="">
+                <img src="images/benz logo.png" alt="">
+            </div>
         </div>
     </section>
-     <footer>
+    <footer>
         <div class="footer_1">
             <div class="footer_div_1">
                 <div class="logo">AUTO-FIX</div>
