--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
             <div class="nav_link1">
                 <a href="index.html">Home</a>
                 <a href="About_us.html">About us</a>
-                <a href="">Services</a>
+                <a href="services.html">Services</a>
                 <a href="blog.html">Blog</a>
                 <a href="">Contact us</a>
             </div>
