--- a/About_us.html
+++ b/About_us.html
@@ -28,8 +28,8 @@
             <div class="nav_link1">
                 <a href="index.html">Home</a>
                 <a href="About_us.html">About us</a>
-                <a href="">Services</a>
-                <a href="">Blog</a>
+                <a href="services.html">Services</a>
+                <a href="blog.html">Blog</a>
                 <a href="">Contact us</a>
             </div>
             <!-- This contains the bookings link, location link and the sign up button-->
